test/semantic-errors/17.pas
program p;
begin var a:array of real;
writeln(a[2.0]);
end.
